styles.max.css
@font-face 
{
    font-family: "BankGothic";
    src: url("./fonts/BankGothicBold.ttf");
    font-display: swap;
}

@font-face 
{
    font-family: 'IBM Plex Mono';
    font-style: normal;
    font-weight: 500;
    font-display: swap;
    src: local('IBM Plex Mono Medium'), local('IBMPlexMono-Medium'), url(https://fonts.gstatic.com/s/ibmplexmono/v5/-F6qfjptAgt5VM-kVkqdyU8n3twJwlBFgg.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
    font-display: swap;
}

body
{
	/*background: url("https://i.imgur.com/lO2Hftg.png");*/
    background-color: #021f31;
    color: lightskyblue;
    text-align: center;
}

p
{
    padding: 5px;
}

table
{
    background-color: #232323;
    border: none;
    text-align: center;
    padding: 15px;
    font-size: 20px;
}
.table-dark
{
    color: #c3e8ff;
}

th
{
    background-color: #505050
}

td, tr
{
    padding: 15px;
    
}
  
tr:nth-child(even){background-color: #353535}

pre
{
    font-size: 16px;
    font-family: "Consolas";
    background-color: #232323;
    color: #b1afac;
    margin: 25px;
}

th, td 
{
    border: 1px solid black;
}

h1
{
    font-size: 50px;
    font-family: "BankGothic";
}

video
{
    width:80%
}


/*hyper links*/
a:link
{
    color:#3da5ee;
    text-decoration: none;
}
a:visited
{
    color:#3da5ee;
    text-decoration: none;
}
a:hover
{
    color: white;
    text-decoration: none;

}
a:active
{
    /*color: #dcdcdc;*/
    text-decoration: none;
}

.maindiv
{
    display: block;
    margin-right: 15%;
    margin-left: 15%;
    text-align: justify;
    padding: 25px;
    font-size: 18px;
}

.centerdivbig
{
    display: block;
    margin-right: 15%;
    margin-left: 15%;
    text-align: center;
    padding: 25px;
    font-size: 18px;
}

.centerdiv
{
    display: block;
    margin-right: 15%;
    margin-left: 15%;
    text-align: center;
    padding: 25px;
}

.centerdivtables
{
    padding: 25px;
    display:block;
}

.logo
{
    display: block;
    text-align: center;
    visibility: visible;
}

#video-carousel h4
{
    color: white; 
    text-shadow: 2px 2px 4px #000000;
}

#video-carousel p
{
    color: white; 
    text-shadow: 2px 2px 4px #000000;
}

#navbar 
{
    background-color: #555555;
    font-family: "Rockwell", "IBM Plex Mono";
    letter-spacing: -1px;
    font-size: 25px;
    color: white;
    text-align: left;

    position: fixed;
    top: 0; /*stay on top*/
    width: 100%;
    transition: top 0.5s; /*transition affect when sliding*/
    visibility: hidden; /*hide initially*/
    z-index: 999;
}

/*navbar links*/
#navbar a
{
    float: left;
    display: block;
    color: white;
    text-align: left;
    /*padding-left: 15px*/
    padding-top: 20px;
    padding-left: 20px;
    text-decoration: none;  /*no underlines*/
    z-index: 999;
}

#navbar a:hover
{
    color: #3da5ee;
    text-shadow: darkgrey;
}

#navbar img
{
    top: 50%;
    width: 65px;
    height: 65px;
    left: 10%;
}

.copyright
{
    color: lightgray;
    text-align: center;
    font-family: "Consolas";
    letter-spacing: 4px;
    font-size: 12px;
    bottom: 0;
    display: block;
    padding: 20px;
}

.copyright a
{
    color: lightgray;
}

.copyright a:hover
{
    color: white;
}

#formated
{
    padding-left:35em;
    margin-left: 15em;
}

@media (min-width: 768px) {
    .carousel-multi-item-2 .col-md-3 {
    float: left;
    width: 25%;
    max-width: 100%; } }
    
    .carousel-multi-item-2 .card img {
    border-radius: 2px; }


/*download buttons*/
a.assetBtnDownload 
{
	-moz-box-shadow:inset 0px 0px 0px 0px #a4e271;
	-webkit-box-shadow:inset 0px 0px 0px 0px #a4e271;
	box-shadow:inset 0px 0px 0px 0px #a4e271;
	background-color:#89c403;
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	border-radius:10px;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Courier New;
	font-size:30px;
	font-weight:bold;
	padding:12px 14px;
	text-decoration:none;
    text-shadow:3px 3px 1px #528009;
}
a.assetBtnDownload:hover 
{
	background-color:#77a809;
}
a.assetBtnDownload:active 
{
	position:relative;
	top:1px;
}

a.binBtnDownload 
{
	-moz-box-shadow:inset 0px 0px 0px 0px #a4e271;
	-webkit-box-shadow:inset 0px 0px 0px 0px #a4e271;
	box-shadow:inset 0px 0px 0px 0px #a4e271;
	background-color:#89c403;
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	border-radius:10px;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Courier New;
	font-size:30px;
	font-weight:bold;
	padding:12px 14px;
	text-decoration:none;
    text-shadow:-3px 3px 1px #528009;
}
a.binBtnDownload:hover 
{
	background-color:#77a809;
}
a.binBtnDownload:active 
{
	position:relative;
	top:1px;
}

a.map1BtnDownload 
{
	-moz-box-shadow:inset 0px 0px 0px 0px #70bce0;
	-webkit-box-shadow:inset 0px 0px 0px 0px #70bce0;
	box-shadow:inset 0px 0px 0px 0px #70bce0;
	background-color:#0476c2;
	-moz-border-radius:9px;
	-webkit-border-radius:9px;
	border-radius:9px;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Courier New;
	font-size:20px;
	font-weight:bold;
	padding:12px 8px;
	text-decoration:none;
	text-shadow:0px 3px 1px #0a1e80;
}
a.map1BtnDownload:hover 
{
	background-color:#1f57c0;
}
a.map1BtnDownload:active {
	position:relative;
	top:1px;
}

        

/* beta release buttons*/
a.assetBtnDownloadSm
{
	-moz-box-shadow:inset 0px 0px 0px 0px #a4e271;
	-webkit-box-shadow:inset 0px 0px 0px 0px #a4e271;
	box-shadow:inset 0px 0px 0px 0px #a4e271;
	background-color:#89c403;
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	border-radius:10px;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Courier New;
	font-size:18px;
	font-weight:bold;
	padding:10px 12px;
	text-decoration:none;
    text-shadow:2px 2px 1px #528009;
}
a.assetBtnDownloadSm:hover 
{
	background-color:#77a809;
}
a.assetBtnDownloadSm:active 
{
	position:relative;
	top:1px;
}

a.binBtnDownloadSm
{
	-moz-box-shadow:inset 0px 0px 0px 0px #a4e271;
	-webkit-box-shadow:inset 0px 0px 0px 0px #a4e271;
	box-shadow:inset 0px 0px 0px 0px #a4e271;
	background-color:#89c403;
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	border-radius:10px;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Courier New;
	font-size:18px;
	font-weight:bold;
	padding:10px 12px;
	text-decoration:none;
    text-shadow:-2px 2px 1px #528009;
}
a.binBtnDownloadSm:hover 
{
	background-color:#77a809;
}
a.binBtnDownloadSm:active 
{
	position:relative;
	top:1px;
}


/*for main page*/
a.bigDownloadHoverBtn {
	box-shadow:inset 0px 0px 0px 0px #a4e271;
	background-color:#89c403;
	border-radius:42px;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Arial;
	font-size:35px;
	font-weight:bold;
	padding:10px 24px;
	text-decoration:none;
	text-shadow:2px 2px 0px #528009;
	position: fixed;
	z-index: 9;
	right: 30px;
	bottom: 30px;
}
a.bigDownloadHoverBtn:hover {
	background-color:#1f57c0;
	border-radius: 90px;
    font-size: 15px;
    padding:20px 24px;
    right: 25px;
	bottom: 20px;
}
a.bigDownloadHoverBtn:active {
	bottom: 28px;
}


.card {
    border: 3;
    background-color: lightskyblue;
}

.carousel-control-next, .carousel-control-prev
{
    width: 10%;

}

.carousel-control-next-icon, .carousel-control-prev-icon
{
    width: 40px;
    height: 40px;
}

#image-carousel
{
    width: 125%;
    margin-left: -10%;
}

#image-inner-carousel
{
    width: 80%;
    margin-left: 10%;
}

